fix: css fixes for header on safari and firefox and clipping fixes for large screens

--- a/assets/css/components/main-header.scss
+++ b/assets/css/components/main-header.scss
@@ -1,4 +1,5 @@
 .main-header {
+  min-height: 70px;
   flex-direction: column;
   padding-bottom: $spacing-medium;
   padding-left: $spacing-medium;
