--- a/assets/css/components/methodology.scss
+++ b/assets/css/components/methodology.scss
@@ -106,6 +106,7 @@ section.methodology {
   width: 90%;
 
   @include breakpoint(1170px) {
+    max-width: 1300px;
     width: 80%;
     margin-top: 0;
   }
