--- a/assets/css/generic/fonts.scss
+++ b/assets/css/generic/fonts.scss
@@ -8,7 +8,7 @@ html {
   }
 
   @include breakpoint($gt-lg) {
-    font-size: 18px;
+    font-size: 17px;
   }
 }
 
